<?xml version="1.0"?>
<package format="2">
  <name>sync_data_pack</name>
  <version>0.0.1</version>
  <description>A simple ROS package for syncing data.</description>
  <maintainer email="nourelhoudabensaadi@gmail.com">Nour Elhouda Ben Saadi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
</package>
